syntax="proto3";

package qrurl.v1;

message PostQrCodeRequest {
  string image = 1; // base64 encoded image
}

message PostQrCodeResponse {
  string url = 1;
}

service QrUrlService {
  rpc PostQrCode(PostQrCodeRequest) returns (PostQrCodeResponse);
}
